# cps-software

./: .gitignore  LICENSE.txt  README.md
lib/: CMakeLists.txt  Doxyfile  Makefile  README.md
lib/accel/: accel.c  accel.h
lib/cam/: cam.py  cam_RPi.py  cam_client.c  cam_client.h  cam_example.c
lib/cps/: cps.c  cps.h
lib/distance/: distance.c  distance.h
lib/dxl/: dxl.c  dxl.h
lib/examples/: accel.c  dist.c  distance.c  dxl.c  dxl_old.c  mg90s.c  rpc_server.c
lib/mg90s/: mg90s.c  mg90s.h
lib/python_api/: mi_cps.pyx  setup.py
lib/rpc/: .gitignore  Makefile  README.md  requirements.txt  rpc.c  rpc.h  rpc.py  whitelist
lib/rpc/client/: base.c
lib/rpc/server/: base.c
notes/: RPi IP.txt  time-reporting.txt
projects/: README.md
projects/humanoid/: README.md  helper_functions.py  humanoid.py  main.py  read_servos.py
projects/spider/: CMakeLists.txt  Getting-Started.md  README.md
projects/spider/assembly/: BOM.md  README.md  assembly-instructions.md  parts.md
projects/spider/demo/: CMakeLists.txt
projects/spider/demo/src/: ctrl.c  ctrl.h  main.c  main_sensors.c  positions.h
projects/spider/rpc_demo/: CMakeLists.txt
projects/spider/rpc_demo/src/: main.c  positions.h
projects/spider/src/: main.c  positions.h
projects/sts-crane/: README.md
projects/sts-crane/craneDemo/: CMakeLists.txt  demo.c  mg90sTest.py
python/: helper_functions.py  standup.py
remote-ctrl/client/: condaenv-gui.yaml  test-cli.py  test-gui.py
remote-ctrl/client/cps_client/: __init__.py  slipp.py
remote-ctrl/client/cps_client/connection/: __init__.py  threaded_connection.py
remote-ctrl/client/cps_client/gui/: __init__.py  _gtk4.py  app.py  cache.py  style.css
remote-ctrl/client/cps_client/gui/boxes/: __init__.py  command_box.py  connection_box.py  control_box.py  logging_box.py  telemetry_box.py
remote-ctrl/client/cps_client/gui/gui_types/: __init__.py  refresher.py
remote-ctrl/client/cps_client/utils/: __init__.py  dynamixel.py  martin_control.py
remote-ctrl/server/: Dockerfile  Makefile  README.md  bashrc.sh  client.py  compose.yaml  server.sh  server_spider.py
remote-ctrl/server/cps_server/: __init__.py  connection.py  run_policy.py  slipp.py
remote-ctrl/server/cps_server/controllers/: controllerbase.py  spider.py
remote-ctrl/server/cps_server/interface/: dynamixel.py
remote-ctrl/server/patches/: fix-packet_handler.h.patch  fix-port_handler.c.patch
server/: Makefile  README.md  bashrc.sh
server/cps_server/: __init__.py  connection.py  slipp.py
server/cps_server/controllers/: __init__.py  spider.py
server/mi_cps/: mi_cps.pyx  setup.py
server/patches/: fix-packet_handler.c.patch  fix-port_handler.h.patch
